--- a/Siemens.MP.csproj
+++ b/Siemens.MP.csproj
@@ -11,6 +11,8 @@
     <Compile Remove="Data\Migrations\20190829123222_AddTaskTable.Designer.cs" />
     <Compile Remove="Data\Migrations\20190910083221_AddedProject.cs" />
     <Compile Remove="Data\Migrations\20190910083221_AddedProject.Designer.cs" />
+    <Compile Remove="Data\Migrations\20190918090412_addedTwoMoreCollumnsInTaskEntity.cs" />
+    <Compile Remove="Data\Migrations\20190918090412_addedTwoMoreCollumnsInTaskEntity.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
